[package]
name = "axil-mcp"
version = "2.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for Axil — JSON-RPC over stdio"

[dependencies]
axil-core.workspace = true
# Bundle with `deps` on: axil-mcp always ships DocsExtension (axil-docs is a
# non-optional dependency here), so its built-in registration is always present.
axil-bundle = { workspace = true, features = ["deps"] }
axil-indexer.workspace = true
axil-docs.workspace = true
axil-workspace.workspace = true

# Optional Tier-2 Extensions — gate so consumers can build a trimmed
# MCP server binary without pulling them in. Matches axil-cli's pattern.
axil-checkpoint = { workspace = true, optional = true }
axil-cache = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std"] }
anyhow = { workspace = true }
chrono = { workspace = true }

# Plugin crates — attached lazily at `McpServer::open` based on companion
# files present on disk. Optional so non-MCP builds that re-export axil-mcp
# don't pull the full stack unless they want it.
axil-vector = { workspace = true, optional = true }
axil-graph = { workspace = true, optional = true }
axil-fts = { workspace = true, optional = true }
axil-timeseries = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["vector", "graph", "fts", "timeseries", "checkpoint", "cache"]
vector = ["dep:axil-vector"]
graph = ["dep:axil-graph"]
fts = ["dep:axil-fts"]
timeseries = ["dep:axil-timeseries"]
checkpoint = ["dep:axil-checkpoint", "axil-bundle/checkpoint"]
# Semantic answer cache tools (`cache_get` / `cache_put`). Route through the
# generic Extension MCP dispatch, so no hardcoded handler in this crate.
cache = ["dep:axil-cache", "axil-bundle/cache"]
# Vector with embedder (bge-small/etc.) for plugin-attach parity with CLI.
embed = ["vector", "axil-vector/embed"]
# Durable semantic event log + the `recall_delta` MCP tool. Off by default —
# the tape is a write-amplifier, so the assembled tool surface is unchanged
# unless explicitly enabled.
event-log = ["axil-core/event-log"]
