[package]
name = "axil-fts"
version = "2.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Full-text search plugin for Axil (tantivy)"

[dependencies]
axil-core.workspace = true
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tantivy = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }

[[bench]]
name = "fts_benchmarks"
harness = false
