[package]
name = "axil-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph plugin for Axil (edges + traversal)"

[dependencies]
axil-core.workspace = true
chrono = { workspace = true }
parking_lot = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "graph_benchmarks"
harness = false
