[package]
name = "axil-timeseries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Time-series index plugin for Axil"

[dependencies]
axil-core = { path = "../../axil-core" }
chrono = { workspace = true }
parking_lot = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
