[package]
name = "axil-timeseries"
version = "2.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Time-series index plugin for Axil"

[dependencies]
axil-core.workspace = true
chrono = { workspace = true }
parking_lot = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
