[package]
name = "axil-rerank"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-encoder reranking stage for Axil recall pipeline (Phase 15 P0.3)"

[dependencies]
axil-core = { path = "../../axil-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
ureq = "3"

# ONNX runtime + tokenization gated behind the `onnx` feature so the crate
# stays buildable without large native deps for callers that only want the
# trait + config types.
ort = { workspace = true, features = ["download-binaries", "std"], optional = true }
tokenizers = { workspace = true, optional = true }

[features]
default = []
# Enable the OnnxReranker impl. When off, the crate exposes the trait,
# config, and a no-op reranker that callers can use without dragging ONNX.
onnx = ["dep:ort", "dep:tokenizers"]

[dev-dependencies]
tempfile = { workspace = true }
