[package]
name = "axil-scip"
version = "2.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SCIP (Sourcegraph Code Intelligence Protocol) ingest for Axil"

[dependencies]
axil-core.workspace = true
axil-graph.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
prost = "0.13"

[dev-dependencies]
tempfile = { workspace = true }
prost = "0.13"
