[package]
name = "axil-workspace"
version = "2.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-project workspace coordinator for Axil (Phase 14)"

[dependencies]
axil-core.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
